plugins/opensearch-iouring/dist/native/include/opensearch_iouring.h

/* ============================================================================
 * Version and Feature Detection
 * ============================================================================ */

/**
 * Library version (major * 10000 + minor * 100 + patch)
 */
#define OSUR_VERSION 10000  /* 1.0.0 */
/**
 * Check if IO-uring is supported on this system.
 *
 * @return 1 if supported, 0 if not supported
 */
int osur_is_supported(void);
/**
 * Get the library version string.
 *
 * @return Version string (e.g., "1.0.0")
 */
const char* osur_version(void);
/**
 * Get error description for an error code.
 *
 * @param error_code Negative error code returned by osur_* functions
 * @return Human-readable error description
 */
const char* osur_strerror(int error_code);
/* ============================================================================
 * Ring Management
 * ============================================================================ */

/**
 * Opaque ring handle.
 */
typedef struct osur_ring osur_ring_t;
/**
 * Ring configuration flags.
 */
typedef enum {
    OSUR_RING_DEFAULT     = 0,
    OSUR_RING_SQPOLL      = (1 << 0),  /* Kernel-side submission polling */
    OSUR_RING_IOPOLL      = (1 << 1),  /* Busy-wait for I/O completion */
    OSUR_RING_SINGLE_ISSUER = (1 << 2) /* Single thread will submit */
} osur_ring_flags_t;
/**
 * Create a new IO-uring ring.
 *
 * @param queue_depth Number of entries in SQ/CQ (power of 2, e.g., 256, 512, 1024)
 * @param flags       Ring configuration flags (osur_ring_flags_t)
 * @param ring_out    Output: pointer to the created ring
 * @return 0 on success, negative error code on failure
 *
 * Common errors:
 *   -ENOMEM: Out of memory
 *   -EINVAL: Invalid queue_depth
 *   -ENOSYS: IO-uring not supported (kernel too old)
 */
int osur_ring_create(uint32_t queue_depth, uint32_t flags, osur_ring_t** ring_out);
/**
 * Destroy a ring and free all resources.
 *
 * @param ring The ring to destroy (safe to pass NULL)
 */
void osur_ring_destroy(osur_ring_t* ring);
/**
 * Get the queue depth of a ring.
 *
 * @param ring The ring
 * @return Queue depth
 */
uint32_t osur_ring_queue_depth(osur_ring_t* ring);