plugins/opensearch-iouring/src/main/generated/org/opensearch/index/store/iouring/ffi/opensearch_iouring_h.java

// Generated by jextract

package org.opensearch.index.store.iouring.ffi;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class opensearch_iouring_h extends opensearch_iouring_h$shared {

    opensearch_iouring_h() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.libraryLookup(System.mapLibraryName("opensearch_iouring"), LIBRARY_ARENA)
            .or(SymbolLookup.loaderLookup())
            .or(Linker.nativeLinker().defaultLookup());

    private static final int OSUR_VERSION = (int)10000L;
    /**
     * {@snippet lang=c :
     * #define OSUR_VERSION 10000
     * }
     */
    public static int OSUR_VERSION() {
        return OSUR_VERSION;
    }

    private static class osur_is_supported {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_is_supported");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_is_supported()
     * }
     */
    public static FunctionDescriptor osur_is_supported$descriptor() {
        return osur_is_supported.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_is_supported()
     * }
     */
    public static MethodHandle osur_is_supported$handle() {
        return osur_is_supported.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_is_supported()
     * }
     */
    public static MemorySegment osur_is_supported$address() {
        return osur_is_supported.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_is_supported()
     * }
     */
    public static int osur_is_supported() {
        var mh$ = osur_is_supported.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_is_supported");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *osur_version()
     * }
     */
    public static FunctionDescriptor osur_version$descriptor() {
        return osur_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *osur_version()
     * }
     */
    public static MethodHandle osur_version$handle() {
        return osur_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *osur_version()
     * }
     */
    public static MemorySegment osur_version$address() {
        return osur_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *osur_version()
     * }
     */
    public static MemorySegment osur_version() {
        var mh$ = osur_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_version");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_strerror {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_strerror");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *osur_strerror(int error_code)
     * }
     */
    public static FunctionDescriptor osur_strerror$descriptor() {
        return osur_strerror.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *osur_strerror(int error_code)
     * }
     */
    public static MethodHandle osur_strerror$handle() {
        return osur_strerror.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *osur_strerror(int error_code)
     * }
     */
    public static MemorySegment osur_strerror$address() {
        return osur_strerror.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *osur_strerror(int error_code)
     * }
     */
    public static MemorySegment osur_strerror(int error_code) {
        var mh$ = osur_strerror.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_strerror", error_code);
            }
            return (MemorySegment)mh$.invokeExact(error_code);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
    private static final int OSUR_RING_DEFAULT = (int)0L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.OSUR_RING_DEFAULT = 0
     * }
     */
    public static int OSUR_RING_DEFAULT() {
        return OSUR_RING_DEFAULT;
    }
    private static final int OSUR_RING_SQPOLL = (int)1L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.OSUR_RING_SQPOLL = 1
     * }
     */
    public static int OSUR_RING_SQPOLL() {
        return OSUR_RING_SQPOLL;
    }
    private static final int OSUR_RING_IOPOLL = (int)2L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.OSUR_RING_IOPOLL = 2
     * }
     */
    public static int OSUR_RING_IOPOLL() {
        return OSUR_RING_IOPOLL;
    }
    private static final int OSUR_RING_SINGLE_ISSUER = (int)4L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.OSUR_RING_SINGLE_ISSUER = 4
     * }
     */
    public static int OSUR_RING_SINGLE_ISSUER() {
        return OSUR_RING_SINGLE_ISSUER;
    }

    private static class osur_ring_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_ring_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_ring_create(uint32_t queue_depth, uint32_t flags, osur_ring_t **ring_out)
     * }
     */
    public static FunctionDescriptor osur_ring_create$descriptor() {
        return osur_ring_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_ring_create(uint32_t queue_depth, uint32_t flags, osur_ring_t **ring_out)
     * }
     */
    public static MethodHandle osur_ring_create$handle() {
        return osur_ring_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_ring_create(uint32_t queue_depth, uint32_t flags, osur_ring_t **ring_out)
     * }
     */
    public static MemorySegment osur_ring_create$address() {
        return osur_ring_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_ring_create(uint32_t queue_depth, uint32_t flags, osur_ring_t **ring_out)
     * }
     */
    public static int osur_ring_create(int queue_depth, int flags, MemorySegment ring_out) {
        var mh$ = osur_ring_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_ring_create", queue_depth, flags, ring_out);
            }
            return (int)mh$.invokeExact(queue_depth, flags, ring_out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_ring_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_ring_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void osur_ring_destroy(osur_ring_t *ring)
     * }
     */
    public static FunctionDescriptor osur_ring_destroy$descriptor() {
        return osur_ring_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void osur_ring_destroy(osur_ring_t *ring)
     * }
     */
    public static MethodHandle osur_ring_destroy$handle() {
        return osur_ring_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void osur_ring_destroy(osur_ring_t *ring)
     * }
     */
    public static MemorySegment osur_ring_destroy$address() {
        return osur_ring_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void osur_ring_destroy(osur_ring_t *ring)
     * }
     */
    public static void osur_ring_destroy(MemorySegment ring) {
        var mh$ = osur_ring_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_ring_destroy", ring);
            }
            mh$.invokeExact(ring);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_ring_queue_depth {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_ring_queue_depth");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t osur_ring_queue_depth(osur_ring_t *ring)
     * }
     */
    public static FunctionDescriptor osur_ring_queue_depth$descriptor() {
        return osur_ring_queue_depth.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t osur_ring_queue_depth(osur_ring_t *ring)
     * }
     */
    public static MethodHandle osur_ring_queue_depth$handle() {
        return osur_ring_queue_depth.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t osur_ring_queue_depth(osur_ring_t *ring)
     * }
     */
    public static MemorySegment osur_ring_queue_depth$address() {
        return osur_ring_queue_depth.ADDR;
    }
